--- a/website/pages/plussers.html
+++ b/website/pages/plussers.html
@@ -13,5 +13,19 @@
       width:100px;
       margin:auto;
     }
+
+    .plussers-search{
+      float:left;
+      width:70%;
+      padding: 0px 5px;
+    }
+
+    .plussers-random{
+      float:left;
+      width:25%;
+      overflow: auto;
+      min-height: 100px;
+    }
+
   </style>
 </div>
