Improved home and plussers page

--- a/website/blocks/home-info-big.html
+++ b/website/blocks/home-info-big.html
@@ -2,11 +2,12 @@
   <div>
     <h3>Wat is Oompaa</h2>
     <p> 
-      OOOMPAA is een website gemaakt voor U.
-      Niet alleen zult u hier nieuwe contacten leggen maar ook uw kennis uitbreiden.
+      OOOMPAA is een website gemaakt voor de oudere generatie van Nederland ofwel de plussers. </br>
+      Bij OOMPAA zorgen wij er voor dat kennis opgebouwd over meerdere decenia's niet verloren gaat. Wij bieden de oude generatie een kans om aan de slag te gaan op zowel professioneel als hobby niveau.
     </p>
+    <h3>Hoe werkt OOMPAA</h3>
     <p>
-      Bij oompaa zorgen wij er voor dat kennis opgebouwd over meerde decenia's neit verloren gaat. Wij beiden de oude generatie een kans om awesome te zijn
+      Binnen de website zult u 
     </p>
   </div>
 
