--- a/website/blocks/home-register.html
+++ b/website/blocks/home-register.html
@@ -1,6 +1,6 @@
 <div id="home-register" class="block">
   <div>
-    <h3>Register</h3>
+    <h3>Registreren</h3>
     <div class="form">
       Voornaam: <input class="firstName"></input> </br>
       Achternaam: <input class="lastName"></input>
