--- a/website/blocks/plussers-search.html
+++ b/website/blocks/plussers-search.html
@@ -32,7 +32,8 @@
               "<div id='"+plusser.id+"'class='r-plusser'>"+
                 "<img src='"+plusser.image+"'>"+
                 "<p> "+plusser.firstName+" "+plusser.lastName+" </p>"+
-                "<p> "+plusser.city+" "+plusser.address+" "+plusser.zipcode+"</p>"+
+                "<p> "+plusser.city+"</p>"+
+                "<p> "+plusser.motivation+"</p>"+
               "</div>"
             );
           });
@@ -101,6 +102,11 @@
       right:0px;
 
       width: 33%;
+    }
+    .plussers-search .r-plusser{
+      border-bottom-style: solid;
+      border-color: #70e4bE;
+
     }
     .plussers-search .detail h3{
       margin-top:0px;
