--- a/website/pages/plusser-detail.html
+++ b/website/pages/plusser-detail.html
@@ -22,6 +22,10 @@
                 <td class="bio"></td>
             </tr>
             <tr>
+                <td>Motivatie:</td>
+                <td class="motivation"></td>
+            </tr>
+            <tr>
                 <td>Vaardigheden:</td>
                 <td class="skills"></td>
             </tr>
@@ -43,6 +47,7 @@
           $(".detail-info .city").html(plusser.city);
           $(".detail-info .dayOfBirth").html(plusser.dayOfBirth);
           $(".detail-info .bio").html(plusser.bio);
+          $(".detail-info .motivation").html(plusser.motivation);
           
           $(".detail-info .image").attr('src',plusser.image);
       }); 
