--- a/website/pages/profile.html
+++ b/website/pages/profile.html
@@ -21,6 +21,10 @@
                 <td>Bio:</td>
                 <td class="bio"></td>
             </tr>
+            <tr>
+                <td>Motivatie:</td>
+                <td class="motivation"></td>
+            </tr>            
         </table>
     </section>
 
@@ -36,6 +40,7 @@
           $(".detail-info .city").html(plusser.city);
           $(".detail-info .dayOfBirth").html(plusser.dayOfBirth);
           $(".detail-info .bio").html(plusser.bio);
+          $(".detail-info .motivation").html(plusser.motivation);
           
           $(".detail-info .image").attr('src',plusser.image);
       }); 
