--- a/website/blocks/home-info.html
+++ b/website/blocks/home-info.html
@@ -1,6 +1,6 @@
 <div id="home-info" class="block">
   <h1> OOMPAA  </h1>
-  <p>This is a text made to convince you how awesome we are. Not only are we fantastic but also very handsome and inteligent</p>
+  <p>Welkom op de website van OOMPAA. Een platform die de oudere generatie helpt hun krachten te bundellen.</p>
 
   <style>
 
