--- a/website/pages/plussers.html
+++ b/website/pages/plussers.html
@@ -22,9 +22,12 @@
 
     .plussers-random{
       float:left;
-      width:25%;
+      width:20%;
       overflow: auto;
       min-height: 100px;
+      border-right-style: solid;
+      border-color: #60D4AE;
+      padding-right: 5px;
     }
 
   </style>
