display fix . faaltje

--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -1,5 +1,5 @@
 <div class="groups-random block">
-  <div id="randoms"> </div>
+  <div id="random"> </div>
     <div class="r-groups">
     </div>
   <script>
