bijna fix display
ziet er al veel beter uit. maar reageert niet goed als er word gezocht.
(css ) probleem

--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -43,8 +43,10 @@
   }
   
     .groups-random .r-group{
-      width: 100%;
-      overflow: auto;
+ float: left;
+    min-height: 100px;
+    overflow: auto;
+    width: 25%;
     }
     .groups-random .group-info{
       width:40%;
