--- a/website/pages/home.html
+++ b/website/pages/home.html
@@ -3,7 +3,7 @@
   <include src="blocks/home-info" />
   
   <div id="left">
-    <include src="blocks/home-register" />
+      <include src="blocks/home-register" />
   </div>
   
   <div id="right"> <!-- Only 1 can be right :p -->
@@ -46,10 +46,9 @@
       margin:auto;
       text-align: center;
     }
-
     #home-register{
-      width:100%;
-      margin-top:;
+      width:50%;
+      float:right;
     }
     #home-login{
       width:50%;
