Made plussers in search smaller and spell chack in the registration form

--- a/website/blocks/form-register-plusser.html
+++ b/website/blocks/form-register-plusser.html
@@ -48,15 +48,15 @@
 
       <div class="form">
         <h3>Motivatie</h3>
-        <p>Beschrijv waarom u graag weer aan de slag wilt, op werkje schaak en hoevaak</p>
-        <labeL> Bio: </label><textarea type="textarea" class="motivation"></textarea></br>
+        <p>Beschrijv waarom u graag weer aan de slag wilt, op welke schaal en hoevaak u wilt werken</p>
+        <labeL> Motivatie: </label><textarea type="textarea" class="motivation"></textarea></br>
         <button class="previous">Terug</button>
         <button class="next">Verder</button>
       </div>
       
       <div class="form">
         <h3>Wachtwoord</h3>
-        <p>vul als laatste een wachtwoord in zodat u de volgende keer weer kan inloggen</p>
+        <p>Vul als laatste een wachtwoord in zodat u de volgende keer weer kan inloggen</p>
         <labeL>Password: </labeL> <input type="password" class="password"> </input>
         <button class="previous">Terug</button>
         <button class="next">Verzenden</button>
