--- a/website/pages/groups.html
+++ b/website/pages/groups.html
@@ -13,22 +13,25 @@
     .container{
       width:90%;
     }
-    #groeps h1{
+    #groups h1{
       width:100px;
       margin:auto;
     }
 
-    .groeps-search{
+    .groups-search{
       float:left;
       width:70%;
       padding: 0px 5px;
     }
 
-    .groep-random{
-      float:left;
-      width:25%;
+    .groups-random{
+      
+      width:20%;
       overflow: auto;
       min-height: 100px;
+      border-right-style: solid;
+      border-color: #60D4AE;
+      padding-right: 5px;
     }
 
   </style>
