--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -37,27 +37,29 @@
   </script>
   
   <style>
-  
   .groups-random{
-   margin-top: 10%;
+   margin-top: 20%;
   }
-  
-    .groups-random .r-group{
- float: left;
-    min-height: 100px;
-    overflow: auto;
-    width: 25%;
+    .groups-random .r-groups{
+      width: 100%;
+      overflow: auto;
     }
-    .groups-random .group-info{
+    .groups-random .groups-info{
       width:40%;
-      float:right;
+     
     }
-    .groups-random .group-info p{
+    .groups-random .groups-info p{
       margin-top: 2px;
     }
     .groups-random img{
       float:left;
-      width:20%;
+      width:50%;
+      height:100px;
+      padding-right: 2px;
+    }
+    .groups-random p{
+      margin-top: 0px;
+      margin-bottom: 5px;
     }
   </style>
 </div>
