fix display meerdere resultaten
iets minder crappy

--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -1,5 +1,6 @@
 <div class="groups-random block">
-  <div id="random"> </div>
+<h1>Aanbevolen</h1>
+  <div id="random"></div>
     <div class="r-groups">
     </div>
   <script>
