Added more front page info

--- a/website/blocks/home-info-big.html
+++ b/website/blocks/home-info-big.html
@@ -7,7 +7,7 @@
     </p>
     <h3>Hoe werkt OOMPAA</h3>
     <p>
-      Binnen de website zult u 
+      Binnen de website zult u de mogelijkheid hebben om samen met gelijkgestemden aan de slag te gaan. Op het moment dat u zich geregistreerd heeft kan u via de website berichten sturen naar mede plussers en naar de groepen die zij gevormd hebben. 
     </p>
   </div>
 
