--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -79,26 +79,33 @@
   
   <style>
     .groups-search img{
-      width:20%;
+      width:10%;
     }
 
     .groups-search .search{
-      width:60%;
+      width:75%;
       float:left;
     }
 
     .p-s-info{
       float:right;
     }
-    .r-plusser img{
+    .groups-search .r-plusser img{
       float:left;
+      height: 65px;
+      margin-right: 5px;
     }
 
     .groups-search .detail{
       position:fixed;
       right:0px;
 
-      width: 33%;
+      width: 25%;
+    }
+    .groups-search .r-plusser{
+      border-bottom-style: solid;
+      border-color: #70e4bE;
+
     }
     .groups-search .detail h3{
       margin-top:0px;
