--- a/website/pages/groups.html
+++ b/website/pages/groups.html
@@ -25,7 +25,7 @@
     }
 
     .groups-random{
-      clear: left;
+      float:left;
       width:20%;
       overflow: auto;
       min-height: 100px;
