--- a/website/blocks/btn-invite-to-group.html
+++ b/website/blocks/btn-invite-to-group.html
@@ -2,7 +2,7 @@
   <div>
     <button class="btn-invite">Invite</button>
     <div class="pop-groups-select">
-      <h2>Select a group to invite to </h2>
+      <h2>Select a group to invite <u><span class="p-name"></span></u> to </h2>
       <div class="pop-groups">
       </div>
     </div>
@@ -12,6 +12,10 @@
 
     $('.pop-groups-select').hide();
 
+    $.get(SERVER+"/plussers/"+PARAMS.id+"/firstName",function(data){
+      $(".p-name").html(data);
+    });
+
     var toInvite;
     if(PARAMS != undefined){
       if(PARAMS['id'] != undefined){
@@ -20,23 +24,26 @@
     }
 
     $(".btn-invite").on("click",function(){
-
+      $(".btn-invite-to-group .pop-groups").html("");
       $.get(SERVER+"/plussers/"+PLUSSER+"/groups", function(data){
         for(key in data){
           $.get(SERVER+"/groups/"+data[key],function(data){
             var html = $(".btn-invite-to-group .pop-groups");
             var html2 = 
               "<div class='pop-group' id='"+data.id+"'>"+
-                "<img src='"+data.image+"'> </img>"+
                 "<p>"+data.name+"</p>"+
-                "<p>"+data.description+"</p>"+
+                "<img src='"+data.image+"'> </img>"+
               "</div>"
             ;
       
-            html.html(html2);
+            html.append(html2);
+            sizePop();
           });
         }
         $('.pop-groups-select').fadeIn();
+
+        $("html").css("overflow-y","hidden");
+
 
         $('.pop-groups-select').on("click",".pop-group", function(target){
 
@@ -44,36 +51,51 @@
           
           $.post(SERVER+"/groups/"+$(target.currentTarget).attr("id"),{"plussers":PARAMS.id})
             .done(function(res){
-              $(".pop-groups-select").html("<p>The plusser was succesfully invited</p>");
+              $(".pop-groups").html("<p>The plusser was succesfully invited</p>");
               $(".pop-groups-select").fadeIn();
-            })
-            .fail(function(res){
-              $(".pop-groups-select").html("<p>Somthing went wrong</p>");
+            }).fail(function(res){
+              $(".pop-groups").html("<p>Somthing went wrong</p>");
               $(".pop-groups-select").fadeIn();
-            })
-
+            });
         });
 
-        $('body').on("click", function(target){
+        $('html').on("click", function(target){
           // this is for fun and lazyness not for effiency
 
           if(target.clientX < ($('body').width()*0.15)){
-            $('.pop-groups-select').fadeOut();
+            closePop();
           }
           if(target.clientX > ($("body").width()-($("body").width()*0.15))){
-            $('.pop-groups-select').fadeOut();
+            closePop();
           }
           if(target.clientY < ($('body').height()*0.15)){
-            $('.pop-groups-select').fadeOut();
+            closePop();
           }
           if(target.clientY > ($("body").height()-($("body").height()*0.15))){
-            $('.pop-groups-select').fadeOut();
+            closePop();
           }         
 
+          function closePop(){
+            $("html").css("overflow-y","auto");
+            $('.pop-groups-select').fadeOut();
+          }
         });
       });
     });
 
+
+    //workaround to alwasy center pop-groups (damn you css)
+    $( window ).resize(function(){
+      sizePop();
+    });
+
+    function sizePop(){
+      $(".btn-invite-to-group .pop-groups").css("width", "90%");
+
+      var newWidth = 110 * (Math.floor($(".btn-invite-to-group .pop-groups").width()/110)); ;
+      $(".btn-invite-to-group .pop-groups").css("width",newWidth);
+
+    }
   </script>
 
 
@@ -87,13 +109,39 @@
       border-style:solid;
       border-color:green;
       background-color: rgba(255,255,255,0.9);
+      overflow: auto;
     }
+    .btn-invite-to-group .pop-groups{
+      width:90%;
+      margin:auto;
+      overflow:auto;
+    }
+    .btn-invite-to-group h2{
+      width:100%;
+      text-align: center;
+    }    
+
     .btn-invite-to-group .pop-groups img{
-      width:100px;
+      width:100%;
+      height: 80%;
+      margin:auto;
     }  
     .btn-invite-to-group .pop-group{
       float:left;
+      width: 100px;
+      height: 120px;
+      border-style: none solid solid solid;
+      border-color:#60D4AE;
+      margin: 2px;
     }
+    .btn-invite-to-group .pop-group p{
+      height: 20%;
+      margin-top: 0px;
+      padding-top: 0px;
+      text-align: center;
+      margin:auto;
+      width:90%;
+    }    
     .btn-invite-to-group .pop-group:hover{
       opacity: 0.6;
     }          
