--- a/website/pages/groups.html
+++ b/website/pages/groups.html
@@ -4,8 +4,8 @@
   <h1> Groepen </h1>
   
     <script>
-    include("blocks/groups-content","#groups")
-	include("blocks/groups-aanbevolen","#groups")
+	include("blocks/groups-aanbevolen","#groups");
+	include("blocks/groups-content","#groups");
   </script>  
   
   
