--- a/website/pages/plusser-detail.html
+++ b/website/pages/plusser-detail.html
@@ -1,6 +1,6 @@
 <div id="plussers-detail" class="container page">
   <h1>title</h1>
-    <include src="blocks/btn-invite-to-group" />
+    <div id="btn-cont" />
     <section class="detail-info">
         <p>
             <img class="image" width="150px" src="" />
@@ -67,8 +67,11 @@
           }
 
           $(".groups").fadeIn();
+      });
 
-      }); 
+      if(PLUSSER > 0){
+        include("blocks/btn-invite-to-group","#btn-cont");
+      }
     }
 
     init("#plussers-detail");
