--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -72,7 +72,7 @@
 
     $(".groups-search .detail .info").on("click",".d-groups",function(data){
       console.log($(this).attr("id"));
-      navToPage("groups-detail",{"id":$(this).attr("id")});
+      navToPage("group-detail",{"id":$(this).attr("id")});
     });
 
   </script>
