--- a/website/pages/groups.html
+++ b/website/pages/groups.html
@@ -5,6 +5,7 @@
     
     <include src="blocks/groups-aanbevolen" />
     <include src="blocks/groups-content" />
+	<include src="blocks/groups-agenda" />
 
 
     <script>
