detail opzet aangepast. en bijhorende dingen toegevoegd
testdata is nog niet echt geweldig.

--- a/website/blocks/group-detail-info.html
+++ b/website/blocks/group-detail-info.html
@@ -58,7 +58,8 @@
 			var countleden=0;
 			while (group.plussers[countleden])
 			{
-			$(".detail-info .leden").html(group.plussers[countleden])
+			//$(".detail-info .leden").html(group.plussers[countleden])
+			$(".detail-info .leden").html(countleden)
 			countleden++
 			}
 			var countimages=0;
