--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -79,13 +79,16 @@
   
   <style>
     .groups-search img{
-      width:10%;
+      width: 20%;
     }
 
     .groups-search .search{
       width:75%;
       float:left;
     }
+	.d-groups img {
+    width: 50% !important;
+	}
 
     .p-s-info{
       float:right;
