General bug fixes and improved profile pabe

--- a/website/blocks/menu.html
+++ b/website/blocks/menu.html
@@ -3,7 +3,7 @@
     <li link="home">Home</li>
     <li link="plussers">Plussers</li>
     <li link="groups">Groepen</li>
-    <li link="faq">FAQ</li>
+    <li link="faq">Vragen?</li>
   </uL>
 
   <style>
