--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -1,7 +1,7 @@
 <div class="groups-random block">
   <div id="randoms"></div>
     <div class="r-groups">
-    </div>
+    
   <script>
 
     getRandom(10);
@@ -35,9 +35,9 @@
     });
 
   </script>
-  
+  </div>
   <style>
- .groups-random .r-groups{
+ .groups-random .r-group{
       width: 100%;
       overflow: auto;
     }
